--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,5 @@ chrono = { version = "0.4", features = ["serde"] }
 
 thiserror = "2.0"
 anyhow = "1.0"
+tracing = "0.1.43"
+tracing-subscriber = "0.3.22"
