--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,18 +4,23 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-tokio = { version = "1.48", features = ["full"] }
+tokio = { version = "1.48", features = ["full", "rt-multi-thread"] }
 
 sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid", "chrono", "sqlite"] }
 
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
-uuid = { version = "1.18", features = ["v4", "serde"] }
+uuid = { version = "1.18", features = ["v4", "serde", "arbitrary"] }
 chrono = { version = "0.4", features = ["serde"] }
 
 thiserror = "2.0"
 anyhow = "1.0"
 tracing = "0.1.43"
 tracing-subscriber = "0.3.22"
+rand = "0.9.2"
+proptest = "1.0.0"
+test-strategy = "0.4.3"
+
+[dev-dependencies]
 dotenvy = "0.15.7"
