--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ tracing-subscriber = "0.3.22"
 rand = "0.9.2"
 proptest = "1.0.0"
 test-strategy = "0.4.3"
+fractional_index = "2.0.2"
 
 [dev-dependencies]
 dotenvy = "0.15.7"
