--- a/generation/Cargo.toml
+++ b/generation/Cargo.toml
@@ -20,6 +20,7 @@ rand = { workspace = true }
 uuid = { workspace = true }
 fractional_index = { workspace = true }
 anarchist-readable-name-generator-lib = { workspace = true }
+chrono = { workspace = true }
 
 # Binary dependencies
 tokio = { workspace = true }
