--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ members = [
     "generation",
     "postgres",
     "sqlite",
+    "integration_tests",
 ]
 
 [workspace.dependencies]
@@ -36,6 +37,7 @@ rand = "0.9.2"
 proptest = "1.0.0"
 test-strategy = "0.4.3"
 fractional_index = "2.0.2"
+itertools = "0.14.0"
 
 # Other
 dotenvy = "0.15.7"
