--- a/integration_tests/Cargo.toml
+++ b/integration_tests/Cargo.toml
@@ -17,3 +17,4 @@ dotenvy = { workspace = true }
 uuid = { workspace = true }
 rand = { workspace = true }
 tracing-subscriber = { workspace = true }
+fractional_index = { workspace = true }
