Trying out DBSP for IVM/synn: tutorials, maknig Entry compatible, and a very basic stream entry.

--- a/integration_tests/Cargo.toml
+++ b/integration_tests/Cargo.toml
@@ -18,3 +18,4 @@ uuid = { workspace = true }
 rand = { workspace = true }
 tracing-subscriber = { workspace = true }
 fractional_index = { workspace = true }
+rand_chacha.workspace = true
