--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ members = [
     "mobile",
     "postgres",
     "sqlite",
-    "mobile",
+    "mobile", "ivm",
 ]
 resolver = "2"
 
@@ -24,6 +24,7 @@ test-strategy = "0.4.3"
 thiserror = "2.0"
 tracing = "0.1.43"
 tracing-subscriber = "0.3.22"
+rand_chacha = "0.9.0"
 
 [workspace.dependencies.chrono]
 version = "0.4"
