--- a/generation/Cargo.toml
+++ b/generation/Cargo.toml
@@ -26,3 +26,5 @@ chrono = { workspace = true }
 tokio = { workspace = true }
 sqlx = { workspace = true }
 dotenvy = { workspace = true }
+rand_distr = "0.5.1"
+rand_chacha = "0.9.0"
