Fix UI freezing after n async tasks due to async main calling blocking launch function.

--- a/integration_tests/Cargo.toml
+++ b/integration_tests/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2024"
 [dependencies]
 gv_core = { path = "../core" }
 gv_postgres = { path = "../postgres" }
+gv_sqlite = { path = "../sqlite" }
 generation = { path = "../generation" }
 sqlx = { workspace = true }
 tracing = { workspace = true }
