Restructure workspace. Begin laying out attribute/value design and impl. Remove ids from deltas: doesn't suppot composite FK, unnecessary, and duplcates information.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [workspace]
 members = [
     "core",
+    "desktop",
     "generation",
     "integration_tests",
-    "mobile",
+    "ivm",
     "postgres",
     "sqlite",
-    "mobile", "ivm",
 ]
 resolver = "2"
 
