--- a/desktop/Cargo.toml
+++ b/desktop/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "mobile"
+name = "desktop"
 version = "0.1.0"
 authors = ["Brian Luther <briansluther@gmail.com>"]
 edition = "2021"
@@ -21,6 +21,8 @@ tracing = { workspace = true }
 chrono = { workspace = true }
 serde = { workspace = true }
 serde_json.workspace = true
+dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
+dioxus-free-icons = { version = "0.10.0", features = ["font-awesome-brands", "ionicons"] }
 
 [features]
 default = ["desktop"]
